Implementacion de los links y las reseñas de lol

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
                 <h2>MOBA</h2>
                 <h3 class="llol">League of Legends</h3>
                 <h3 class="ldota">DOTA 2</h3>
-                <section class="lol"></section>
-                <section class="dota"></section>
+                <section class="lol"><a href="./secciones/Lol.html"><img src="./assets/img/lol.jpg" alt=""></a></section>
+                <section class="dota"><a href="./secciones/DOTA.html"><img src="./assets/img/dota.jpg" alt=""></a></section>
             </section>
             <section class="shooter">
                 <h2>Shooter</h2>
                 <h3 class="lcsgo">CSGO</h3>
                 <h3 class="lfortnite">Fortnite</h3>
-                <section class="csgo"></section>
-                <section class="fortnite"></section>
+                <section class="csgo"><a href="./secciones/CSGO.html"><img src="./assets/img/csgo2.jpg" alt=""></a></section>
+                <section class="fortnite"><a href="./secciones/Fortnite.html"><img src="./assets/img/fortnite.jpg" alt=""></a></section>
             </section>
             <section class="rpg">
                 <h2>RPG</h2>
                 <h3 class="lkingdom">Kingdom Hearts III</h3>
                 <h3 class="lfantasy">Final Fantasy XV</h3>
-                <section class="kingdom"></section>
-                <section class="fantasy"></section>
+                <section class="kingdom"><a href="./secciones/Kingdom Hearts III.html"><img src="./assets/img/kingdom hearts.jpg" alt=""></a></section>
+                <section class="fantasy"><a href="./secciones/Final Fantasy.html"><img src="./assets/img/final fantasy.jpg" alt=""></a></section>
             </section>
         </article>
     </div>
