Paginas de los shooter y correcciones en los de MOBA

--- a/secciones/DOTA.html
+++ b/secciones/DOTA.html
@@ -25,16 +25,20 @@
             <section class="criticas">
                 <h3>Criticas</h3>
                 <div>
-                    <h4>Delperez</h4>
-                    <p>Es solo una copia barata de League of Legends, lo probe y a las dos partidas lo desinstale porque no era muy bueno</p>
+                    <h4>Pabloin</h4>
+                    <p>Lo juego desde hace un año y me gusta, es un juego para gente inteligente muy estrategico desde la eleccion de heroes, hay que saber contrarrestar a los enemigos desde la seleccion de herores y dar el utltimo golpe a los creeps para tener mucho oro y armarse con buenos items para ganar en equipo.
+                        El evento principal de The International 2015 de DOTA será celebrado del 3 al 8 de agosto, se aprende mucho mirando las partidas profesionales.</p>
                 </div>
                 <div>
-                    <h4>Sancho34</h4>
-                    <p>EMOCIONANTE. MUY BUEN JUEGO TIENE MILES DE JUGADORES A NIVEL MUNDIAL, yo lo juego desde hace 10 meses es un juego en el que cada parte es necesaria, todos son parte de la estrategia</p>
+                    <h4>TheGrundig1</h4>
+                    <p>Es el juego que más he jugado en mi vida con 1700 horas más las que me quedan, y en mi opinión es el mejor MOBA que se ha creado hasta hoy.
+                        Gráficamente está muy bien y es superior a cualquier otro MOBA que hay ahora mismo, ya que usa el motor Source de Valve.
+                        La jugabilidad es muy buena y al empezar a jugar puede parecer muy difícil, pero cuando aprendes algunas cosas el juego se vuelve más divertido de lo que ya era, y tiene más de 100 personajes para usar, por lo que cada partida será distinta a la anterior.</p>
                 </div>
                 <div>
-                    <h4>Weringtonsito</h4>
-                    <p>Is the best game in the world. no he visto juego en el mundo, yo soy un gamer, q me guste mas es sin duda el juego mas completo, te divierte, te hace pensar, haces amigos y mas. Es de MOBA, es en equipo y a la vez individual</p>
+                    <h4>TheDarkTerror</h4>
+                    <p>Tenia buenos amigos jugando a este juego y muchas veces me insistieron con que lo probara, y así empezó toda la historia, yo me propuse jugar 3 dias para ver si me iba enganchando poco a poco, Llegue a jugar unas 5/7 partidas y termine aburridamente aburrida, he llegado a leer que los graficos, que los controles etc... son mejores que en el League of Legends. y a mi sinceramente me aburrió.
+                        A dia de hoy sigo sin entender el por que este juego es tan "Famoso" cuando es aburridisimo de narices.</p>
                 </div>
             </section>
         </article>
