--- a/secciones/Lol.html
+++ b/secciones/Lol.html
@@ -25,16 +25,21 @@
             <section class="criticas">
                 <h3>Criticas</h3>
                 <div>
-                    <h4>Juan</h4>
-                    <p>A mi me parece un juego bastante adictivo, gracias a la gran variedad de modos de juego y el hecho de poder jugar con los amigos para realizar compañerismo y clanes, algo que en la actualidad se estaba perdiendo en la mayoría de los juegos.</p>
+                    <h4>Zephyra</h4>
+                    <p>League of Legends sin duda es el moba mas popular de su genero, puede ser entretenido a ratos pero llega un momento en el que dices que ya basta.
+                        El juego como tal esta bien para tener 10 años pese a que la mayoria de campeones son una skin de otro campeon y nunca este balanceado, el problema es la actitud de su comunidad, decir que es la PEOR comunidad de todos los juegos online es quedarse corto, gente que trollea por que pickeas X champ, gente que flamea porque no saben jugar sus lineas, gente MALA que van yoloprocarry y a la hora de la verdad son mierda
+                        Cúrate en salud, no juegues a league of legends, te lo dice alguien que lleva jugando desde la s3.</p>
                 </div>
                 <div>
-                    <h4>Anonimo</h4>
-                    <p>Un día decides darle una oportunidad, para que se calle tu amigo pesado de turno, y decides descargártelo. Pero cuando le das la oportunidad te vicias y al otro dia te frustras tanto que decides desinstalarlo.</p>
+                    <h4>Crusader76</h4>
+                    <p>Hablare en nombre de muchos diciendo que hay que nerfear a ciertos personajes los personajes con mucha fuerza son muy baratos y algunos caros son algo inutiles quieren usuarios felices balanceen el juego algunos pueden hacerse pentas sin ayuda yi y jax son ejemplos claros de aquello pueden aturdir curarse e infligir mucho daño muchos y otros son casi inutiles riven y yasuo mejor ni hablar ademas..</p>
                 </div>
                 <div>
-                    <h4>Pedro</h4>
-                    <p>Lo bueno del LoL es que te puedes divertir bastante si no eres muy competitivo, pero en el caso de que si, pasaras unas buenas horas gritandole a un jugador que probablemente no conoces y nunca llegaras a conocer. Esta llena de gente toxica pero si puedes verle el lado bueno lo disfrutaras</p>
+                    <h4>Chaoder</h4>
+                    <p>Este juego a dado la fama a los MOBA, sí, y ya es un clásico. Aun que pocas cosas son lo que lo diferencia de otros MOBAs.
+                        El juego no para de ofrecer lo mismo cada vez que lo juegas, aun que tienes una gran variedad de personajes para que nunca dejes de jugar. La cosa es como en cualquier competitivo, buscas ganar, etc. La estrategia y reacción son fundamentales para el juego.
+                        Haces un equipo con otros 4 extraños que no conoces, intentas matar a los rivales y destruir el ''nexo'' enemigo. 
+                        Tu personaje se especializara en algo de lo siguiente: matar, ser inmortal, ayudar a matar o matar a escondidas.</p>
                 </div>
             </section>
         </article>
