Reseñas de ARPG

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <section class="csgo"><a href="./secciones/CSGO.html"><img src="./assets/img/csgo2.jpg" alt=""></a></section>
                 <section class="fortnite"><a href="./secciones/Fortnite.html"><img src="./assets/img/fortnite.jpg" alt=""></a></section>
             </section>
-            <section class="rpg">
-                <h2>RPG</h2>
+            <section class="arpg">
+                <h2>ARPG</h2>
                 <h3 class="lkingdom">Kingdom Hearts III</h3>
                 <h3 class="lfantasy">Final Fantasy XV</h3>
                 <section class="kingdom"><a href="./secciones/Kingdom Hearts III.html"><img src="./assets/img/kingdom hearts.jpg" alt=""></a></section>
